--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+bart_abs_title
+bart_large_abs_title
+arxiv-tokenized.hf
